bau: Use common test helpers